fix-card-height & add-overflow-y

--- a/css/bonus.css
+++ b/css/bonus.css
@@ -5,6 +5,21 @@
     --orange: #F27405;
     --black: #485359;
 }
+
+/* SCROLLBAR CUSTOM */
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #313131; 
+}
+::-webkit-scrollbar-thumb {
+    background: #0000008c; 
+}
+  ::-webkit-scrollbar-thumb:hover {
+    background: #030303; 
+}
+
 body{
     background-image: url(../img/bar-background.jpg);
     background-size: cover;
@@ -22,21 +37,16 @@ button{
     font-weight: bolder;
 }
 .card{
-    border-radius: 10px;
     border: 2px solid var(--orange);
     background-color: rgba(0, 0, 0, 0.582);
-}
-.card-body{
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
+    height: 500px;
+    overflow-y: scroll;
+    margin-bottom: 25px;
 }
 h6{
     color: var(--orange);
 }
-.card-title{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
+
 .card-image img{
     width: 100%;
     height: 100%;
